--- a/src/app/manager/manager.component.html
+++ b/src/app/manager/manager.component.html
@@ -1,4 +1,4 @@
-<mat-toolbar color="accent">
+<mat-toolbar color="accent" fxLayoutGap="8px">
   <a mat-button routerLink="/manager/home" routerLinkActive="active-link">
     Dashboard
   </a>
@@ -8,5 +8,11 @@
   <a mat-button routerLink="/manager/receipts" routerLinkActive="active-link">
     Lookup Receipts
   </a>
+  <button mat-mini-fab routerLink="/inventory" matTooltip="Inventory">
+  <mat-icon>list</mat-icon>
+</button>
+<button mat-mini-fab routerLink="/pos" matTooltip="POS">
+  <mat-icon>shopping_cart</mat-icon>
+</button>
 </mat-toolbar>
 <router-outlet></router-outlet>
